--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -2,7 +2,8 @@
     color: #fff;
     width: 300px;
     position: fixed;
-    top: 130px;
+    top: 120px;
+    overflow: auto;
 }
 
 .user-img {
@@ -28,42 +29,59 @@
     color: #07f;
 }
 
-.info a {
+.info .github-link {
     margin: 13px 0 20px;
     background: #1a263d;
     color: #07f;
     padding: 7px 0;
     border-radius: 10px;
+    border: 1px solid rgba(0, 119, 255, 0.13);
     font-weight: 500;
+    transition: 300ms all;
 }
 
-.info a:hover {
+.info .github-link:hover {
     background: #243657;
+    border: 1px solid rgba(0, 119, 255, 0.13);
 }
 
-.info a svg {
+.info .github-link svg {
     margin-right: 10px;
     width: 20px;
     height: 20px;
 }
 
-.info .location {
+.user-links {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
     margin-bottom: 15px;
 }
 
-.info .location svg {
-    margin-right: 5px;
+.user-links li {
+    color: #fff;
 }
 
-.info ul {
+.user-links li svg {
+    fill: #fff;
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+}
+
+.user-links li a {
+    color: #fff;
+}
+
+.info .user-action {
     flex-direction: column;
 }
 
-.info ul li {
+.info .user-action li {
     color: #808896;
 }
 
-.info ul li span {
+.info .user-action li span {
     color: #fff;
     margin-right: 10px;
     font-weight: 500;
