--- a/src/assets/css/helper.css
+++ b/src/assets/css/helper.css
@@ -19,10 +19,16 @@
     align-items: center;
 }
 
+.flex-column-center {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .gap-10 {
     gap: 10px;
 }
 
-.gap-15{
+.gap-15 {
     gap: 15px;
 }
