--- a/src/common/Header/header.css
+++ b/src/common/Header/header.css
@@ -1,5 +1,4 @@
 #header {
-    border-bottom: 1px solid #ffffff11;
     padding: 20px 0;
     position: fixed;
     width: 100%;
@@ -13,13 +12,8 @@
     font-weight: 600;
 }
 
-#header a span {
-    color: #fff;
-}
-
 #header .form-area {
     border-radius: 100px;
-    background: #1f2a47;
     height: 45px;
     padding: 0 20px;
     gap: 10px;
@@ -27,7 +21,6 @@
 }
 
 #header .form-area .search {
-    fill: #fff;
     width: 22px;
     height: 22px;
 }
@@ -63,16 +56,56 @@
     font-size: 17px;
 }
 
-.mode {
-    margin-left: 10px;
-    background: #1f2a47;
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    cursor: pointer;
+@media only screen and (max-width:578px) {
+    #header .row {
+        flex-direction: column;
+        align-items: center;
+        gap: 15px;
+    }
+
 }
 
-.mode svg {
-    font-size: 25px;
-    color: #fff;
+@media (prefers-color-scheme: light) {
+
+    #header {
+        background-color: #fff;
+        border-bottom: 1px solid #00000013;
+    }
+
+    #header a span {
+        color: #000;
+    }
+
+    #header .form-area {
+        background: #dce0ea;
+    }
+
+    #header .form-area input::placeholder {
+        color: #0000007e;
+    }
+
+    #header .form-area input {
+        color: #000;
+    }
+
+}
+
+@media (prefers-color-scheme: dark) {
+
+    #header {
+        background-color: #141d2e;
+        border-bottom: 1px solid #ffffff11;
+    }
+
+    #header .form-area {
+        background: #1f2a47;
+    }
+
+    #header a span {
+        color: #fff;
+    }
+
+    #header .form-area .search {
+        fill: #fff;
+    }
 }
