--- a/src/components/Cards/RepoCards/RepoCards.css
+++ b/src/components/Cards/RepoCards/RepoCards.css
@@ -68,3 +68,32 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
+@media only screen and (max-width:578px) {
+    .link a {
+        font-size: 16px;
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    .repo-cards {
+        background-color: #f4f9fb;
+    }
+
+    .repo-cards .desc-repo {
+        color: #fff;
+    }
+
+    .repo-cards .link .status {
+        background: #2d2f38;
+        color: #fff;
+    }
+
+    .repo-cards ul li {
+        color: #000;
+    }
+
+    .repo-cards ul li svg {
+        color: #000;
+    }
+}
